# vn_svgp

./: .gitignore  Cargo.toml  README.md  avg.csv  config.toml  out  out.csv  out.json  out2.csv  scrape_ac.py  t
.github/workflows/: build.yml
source/: config.toml
src/: bezier.rs  config.rs  main.rs  path.rs  point.rs
src/path/: optimizer.rs  points.rs  utils.rs
src/path/optimizer/: ad_floor.rs  three_pt_average.rs
